@startuml

skinparam class {
    HeaderBackgroundColor #DAE8FC
	BackgroundColor White
	ArrowColor black
	BorderColor 6C8EBF
	FontSize 15
	headerFontColor 6C8EBF
	style Frame
	FontName Arial Rounded MT Bold

	}
hide circle

skinparam classAttributeIconSize 0

skinparam classAttributeFontSize 13

skinparam shadowing false

skinparam defaultFontName Segoe UI
class GetTheDayWithHighestTemperatureAmplitudeRestController
class HouseRepo
class GeographicAreaRepo
class House
class GeographicArea
class ListOfSensors
class Sensor
class ListOfReadings
class Reading


GetTheDayWithHighestTemperatureAmplitudeRestController "1" -down-> "1" HouseRepo
GetTheDayWithHighestTemperatureAmplitudeRestController "1" -right-> "1" GeographicAreaRepo
GeographicAreaRepo "1" --> "0..*" GeographicArea

HouseRepo "1" --> "1" House
GeographicArea "1" -> "1" ListOfSensors
ListOfReadings "1   " --> "0..* " Reading
ListOfSensors "1   " --> "0..* " Sensor
Sensor "1  " --> "1  " ListOfReadings


GetTheDayWithHighestTemperatureAmplitudeRestController : + getGeographicAreaOfTheHouse()
GetTheDayWithHighestTemperatureAmplitudeRestController : + checkIfHaveSensorsOnHouseAreaWithTypeAndReadings()
GetTheDayWithHighestTemperatureAmplitudeRestController : + getDayWithHighestTemperatureAmplitude( )
GetTheDayWithHighestTemperatureAmplitudeRestController : + getHighestTemperatureAmplitude( )

HouseRepo : + getGeographicArea ( )

GeographicAreaRepo : + checkIfHaveSensorsOnHouseAreaWithTypeAndReadings()
GeographicAreaRepo : + getDayWithHighestTemperatureAmplitude( )
GeographicAreaRepo : + getHighestTemperatureAmplitude( )

House : - getGeographicArea:String
House : + getGeographicArea ( )

GeographicArea : - geographicAreaType:String
GeographicArea : + getListOfSensors( )
GeographicArea : + getSensorsClosestToHouseArea( )

ListOfSensors : + getSensorClosestForReadings( )

Sensor : - geographicAreaType:String
Sensor : - location:Location
Sensor : - sensorType:SensorType
Sensor : - installationDate:LocalDate
Sensor : + calculateDistanceBetweenSensorToHouse( )
Sensor : + checkSensorTypeToList( )

ListOfReadings : + getHighestTemperatureAmplitudeAndDate( )
ListOfReadings : + getHighestTemperatureAmplitude( )
ListOfReadings : + getMaxTempOfDay( )
ListOfReadings : + getMinTempOfDay( )

Reading : - value:double
Reading : - dateTime:LocalDateTime
Reading : + getValue( )
Reading : + getDateTime( )
Reading : + checkIfDateIsBefore( )
Reading : + checkIfDateIsAfter( )
Reading : + isValueOfDay( )

@enduml